--- a/_src/assets/css/syntax.css
+++ b/_src/assets/css/syntax.css
@@ -179,16 +179,6 @@ pre[class*="language-"] {
 
 /* Going dark */
 @media (prefers-color-scheme: dark) {
-  :root {
-    /* Colors */
-    --background: #111111;
-    --lighttext: #808080;
-    --text: #cccccc;
-    --decorative: #666666;
-    --marklight: #222222;
-    --markdark: #191919;
-  }
-
   /**
   * a11y-dark theme for JavaScript, CSS, and HTML
   * Based on the okaidia theme: https://github.com/PrismJS/prism/blob/gh-pages/themes/prism-okaidia.css
